--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <title>Webstudio</title>
   </head>
   <body>
