--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
           </p>
         </div>
         <div class="footer-socials">
-          <p class="title">Social media</p>
+          <p class="footer-title">Social media</p>
           <ul class="socials">
             <li class="socials-item">
               <a href="" class="socials-link">
@@ -460,10 +460,10 @@
             </li>
           </ul>
         </div>
-        <form class="footer-form">
-          <label>
-            <p class="title">Subscribe</p>
-            <div class="footer-form-wrapper">
+        <div class="footer-subscribe">
+          <p class="footer-title">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label" for="subscribe-email">
               <input
                 class="footer-form-input"
                 type="email"
@@ -471,22 +471,22 @@
                 id="subscribe-email"
                 placeholder="E-mail"
               />
-              <button class="btn footer-btn" type="submit">
-                Subscribe
-                <svg class="footer-btn-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg>
-              </button>
-            </div>
-          </label>
-        </form>
+            </label>
+            <button class="btn footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
-        <button type="button" class="modal-close-btn">
-          <svg class="modal-btn-icon" width="8" height="8">
+        <button type="button" class="close-btn">
+          <svg class="close-btn-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
@@ -510,7 +510,7 @@
                 name="user-name"
                 id="user-name"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -557,10 +557,11 @@
             <input
               class="checkbox visually-hidden"
               type="checkbox"
-              name="user-agreement"
-              id="user-agreement"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label for="user-agreement" class="agreement-wrapper">
+            <label for="user-privacy" class="agreement-wrapper">
               <span class="agreement-checkbox">
                 <svg class="agreement-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkmark"></use>
