--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="close-btn">
           <svg class="close-btn-icon" width="8" height="8">
